--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ notitle: true
       {% if post.shortnews %}
       <li class="media">
 	<div class="media-left">
-	  <img style="width:128px" class="media-object img-rounded img-thumbnail" src="{{ post.photo }}">
+	  <img style="width:128px" class="media-object img-thumbnail" src="{{ post.photo }}">
 	</div>
 	<div class="media-body">
 	  <h5 class="media-heading">{{ post.date | date_to_long_string }}</h5>
