--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ notitle: true
 ---
 
 <div class="row">
-  <div class="col-md-9 col-sm-8 col-xs-12">
+  <div class="col-sm-9 col-xs-12">
     <p>
       I work with
       <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
@@ -40,8 +40,8 @@ notitle: true
       {% for post in site.posts limit: site.front_page_news %}
       {% if post.shortnews %}
       <li class="media">
-	<div class="media-left">
-	  <img style="width:128px" class="media-object img-thumbnail" src="{{ post.photo }}">
+	<div class="media-left news hidden-xs">
+	  <img class="media-object img-thumbnail" src="{{ post.photo }}">
 	</div>
 	<div class="media-body">
 	  <h5 class="media-heading">{{ post.date | date_to_long_string }}</h5>
@@ -58,9 +58,9 @@ notitle: true
     </ul>
     <p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p>
   </div>
-  <div class="col-md-3 col-sm-4 col-xs-12">
+  <div class="col-sm-3 col-xs-12">
     <img src="{{ site.base }}/img/iyzhang.jpg" alt="Photo of me"
-	 class="img-circle img-responsive">
+	 class="img-circle img-responsive hidden-xs">
     <div class="contact-title">
       Contact</div>
     <div class="contact">
