adding icon for past work

--- a/index.html
+++ b/index.html
@@ -74,5 +74,12 @@ notitle: true
 	<li><i class="fa-li fa fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
       </ul>
     </div>
+
+    <!-- <div class="contact-title"> -->
+    <!--   Travel</div> -->
+    <!--   <ul class="fa-ul"> -->
+    <!-- 	<li><i class="fa-li fa fa-calendar"></i> -->
+    <!--   </ul> -->
+    
   </div>
 </div>
