--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ notitle: true
       <ul class="fa-ul">
 	<li><i class="fa-li fa fa-envelope"></i>iyzhang@uw.edu</li>
 	<li><i class="fa-li fa fa-location-arrow"></i>185 Stevens Way
-	  Seattle, WA 98195</li>
+	  <br>Seattle, WA 98195</li>
 	<li><i class="fa-li fa fa-building">
 	    <a href="https://www.cs.washington.edu/contact/"></i>Allen
-	  Center</a> Room 591</li>
+	  Center</a><br>Room 591</li>
 	<li><i class="fa-li fa fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
       </ul>
     </div>
