adding rising stars post

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ notitle: true
 	  Center</a>
 	  <br class="hidden-xs">Room 591</li>
 	<li><i class="fa-li fa fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
+	<li><i class="fa-li fa fa-gitlab"></i><a href="https://gitlab.cs.washington.edu/u/iyzhang">iyzhang@gitlab</a></li>
       </ul>
     </div>
 
