--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@ notitle: true
       </ul>
     </div>
 
-    <!-- <div class="contact-title"> -->
-    <!--   Travel</div> -->
-    <!--   <ul class="fa-ul"> -->
-    <!-- 	<li><i class="fa-li fa fa-calendar"></i> -->
-    <!--   </ul> -->
-    
+    <div class="contact-title">
+      Travel</div>
+    <div class="contact">
+      <ul class="fa-ul">
+    	<li><i class="fa-li fa fa-calendar"></i>Oct 5-7 / SOCC / Santa
+    	  Clara, CA</li>
+        <li><i class="fa-li fa fa-calendar"></i>Oct 30-Nov 1 / Rising
+          Stars / Pittsburgh, PA</li>
+        <li><i class="fa-li fa fa-calendar"></i>Nov 2-4 / OSDI /
+        Savannah, GA</li>
+      </ul>
+    </div>
   </div>
 </div>
