cleaning up some links

--- a/publications.html
+++ b/publications.html
@@ -2,9 +2,9 @@
 layout: default
 title: Publications
 ---
-<p>
-    Generated from my <a href="bib/pubs.bib">bibtex
-    file</a> with a cool tool called <a href="https://github.com/sampsyo/bibble">bibble</a>.
-</p>
+<!-- <p> -->
+<!--     Generated from my <a href="bib/pubs.bib">bibtex -->
+<!--     file</a> with a cool tool called <a href="https://github.com/sampsyo/bibble">bibble</a>. -->
+<!-- </p> -->
 
 {% include pubs.html %}
