--- a/index.html
+++ b/index.html
@@ -5,34 +5,28 @@ notitle: true
 ---
 
 <div class="row">
-  <div class="col-sm-9 col-xs-12">
+  <div class="col-xs-12 col-sm-9">
     <p>
       I work with
       <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
 	Levy</a>
-      and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
+	and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
 	Krishnamurthy</a> in
-      the <a href="https://syslab.cs.washington.edu/">Computer Systems
-	Lab</a>.  My current research focuses on systems for large-scale,
-      distributed applications, including distributed runtime systems and
-      transactional storage systems.
-    </p>
-
-    <p>
-      Before starting my PhD, I worked for three years
-      at <a href="http://www.vmware.com/">VMware</a> in the virtual
-      machine monitor group. I received my S.B. in computer science
-      from <a href="http://www.mit.edu">MIT</a> in 2008 and my M. Eng. in
-      2009.
-    </p>
-    
-    <p>
-      I was born in <a href="http://www.ebeijing.gov.cn/">Beijing,
-	China</a> and spent most of my time growing up
-      in <a href="http://en.wikipedia.org/wiki/Columbus,_Indiana">Columbus,
-	Indiana</a>. <a href="http://www.drkp.net">My husband</a> and I
-      like to cook, travel and occasionally do computer science
-      together.
+	the <a href="https://syslab.cs.washington.edu/">Computer
+	Systems Lab</a>.  My current research focuses on systems for
+	large-scale, distributed applications, including distributed
+	runtime systems and transactional storage systems.  Before
+	starting my PhD, I worked for three years
+	at <a href="http://www.vmware.com/">VMware</a> in the virtual
+	machine monitor group. I received my S.B. in computer science
+	from <a href="http://www.mit.edu">MIT</a> in 2008 and my
+	M. Eng. in 2009. I was born
+	in <a href="http://www.ebeijing.gov.cn/">Beijing, China</a>
+	and spent most of my time growing up
+	in <a href="http://en.wikipedia.org/wiki/Columbus,_Indiana">Columbus,
+	Indiana</a>. <a href="http://www.drkp.net">My husband</a> and
+	I cook, travel and occasionally do computer science
+	together.
     </p>
 
     <h3>News & Happenings</h3>
@@ -60,7 +54,8 @@ notitle: true
   </div>
   <div class="col-sm-3 col-xs-12">
     <img src="{{ site.base }}/img/iyzhang.jpg" alt="Photo of me"
-	 class="img-circle img-responsive hidden-xs">
+       class="img-circle img-responsive hidden-xs">
+
     <div class="contact-title">
       Contact</div>
     <div class="contact">
