--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@ notitle: true
 <div class="row">
   <div class="col-xs-12 col-sm-9">
     <div class="jumbotron">
-      <h3>{%icon fa-graduation-cap%} I'm graduating and on the job market!</h3>
-      <p><a class="btn btn-default btn-lg" href="{{ site-base }}/papers/research.pdf" role="button">{%icon
-          fa-file-text-o%} Research Statement</a>
-        <a class="btn btn-default btn-lg" href="{{ site-base }}/papers/teaching.pdf" role="button">{%icon
-          fa-file-text-o%} Teaching Statement</a>
-        <a class="btn btn-default btn-lg" href="{{ site-base }}/papers/research.pdf" role="button">{%icon
-          fa-file-text-o%} CV</a></p>
+      <div class="container-fluid">
+        <div class="row">
+        <h3>{%icon fa-graduation-cap%} I'm graduating and on the job market!</h3>
+        <p><a class="btn btn-default btn-lg" href="{{ site-base }}/research.pdf" role="button">{%icon
+            fa-file-text-o%} Research Statement</a>
+          <a class="btn btn-default btn-lg" href="{{ site-base }}/teaching.pdf" role="button">{%icon
+            fa-file-text-o%} Teaching Statement</a>
+          <a class="btn btn-default btn-lg" href="{{ site-base }}/cv.pdf" role="button">{%icon
+            fa-file-text-o%} CV</a></p>
+        </div>
+      </div>
     </div>
     <p>
       I work with
