--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@ notitle: true
     <div class="jumbotron">
       <div class="container-fluid">
         <div class="row">
-        <h3>{%icon fa-graduation-cap%} I'm graduating and on the job market!</h3>
-        <p><a class="btn btn-default btn-lg" href="{{ site-base }}/research.pdf" role="button">{%icon
-            fa-file-text-o%} Research Statement</a>
+          <h3>{%icon fa-graduation-cap%} I'm graduating and on the job market!</h3>
+        <p class="hidden-xs"><a class="btn btn-default btn-lg" href="{{ site-base }}/research.pdf" role="button">{%icon
+            fa-file-text-o%} Research Statement</span></a>
           <a class="btn btn-default btn-lg" href="{{ site-base }}/teaching.pdf" role="button">{%icon
-            fa-file-text-o%} Teaching Statement</a>
+            fa-file-text-o%} Teaching Statement</span></a>
           <a class="btn btn-default btn-lg" href="{{ site-base }}/cv.pdf" role="button">{%icon
             fa-file-text-o%} CV</a></p>
+<p class="visible-xs"><a class="btn btn-default btn-lg col-xs-12" href="{{ site-base }}/research.pdf" role="button">{%icon
+            fa-file-text-o%} Research Statement</span></a>
+          <a class="btn btn-default btn-lg col-xs-12" href="{{ site-base }}/teaching.pdf" role="button">{%icon
+            fa-file-text-o%} Teaching Statement</span></a>
+          <a class="btn btn-default btn-lg col-xs-12" href="{{ site-base }}/cv.pdf" role="button">{%icon
+            fa-file-text-o%} CV</a></p>
+        
         </div>
       </div>
     </div>
