--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@ notitle: true
       <div class="container-fluid">
         <div class="row">
           <h3>{%icon fa-graduation-cap%} I'm graduating and on the job market!</h3>
-        <p class="hidden-xs"><a class="btn btn-default btn-lg" href="{{ site-base }}/research.pdf" role="button">{%icon
+        <p class="hidden-xs"><a class="btn btn-default btn-lg" href="{{ site.base }}/research.pdf" role="button">{%icon
             fa-file-text-o%} Research Statement</span></a>
-          <a class="btn btn-default btn-lg" href="{{ site-base }}/teaching.pdf" role="button">{%icon
+          <a class="btn btn-default btn-lg" href="{{ site.base }}/teaching.pdf" role="button">{%icon
             fa-file-text-o%} Teaching Statement</span></a>
-          <a class="btn btn-default btn-lg" href="{{ site-base }}/cv.pdf" role="button">{%icon
+          <a class="btn btn-default btn-lg" href="{{ site.base }}/cv.pdf" role="button">{%icon
             fa-file-text-o%} CV</a></p>
-<p class="visible-xs"><a class="btn btn-default btn-lg col-xs-12" href="{{ site-base }}/research.pdf" role="button">{%icon
+<p class="visible-xs"><a class="btn btn-default btn-lg col-xs-12" href="{{ site.base }}/research.pdf" role="button">{%icon
             fa-file-text-o%} Research Statement</span></a>
-          <a class="btn btn-default btn-lg col-xs-12" href="{{ site-base }}/teaching.pdf" role="button">{%icon
+          <a class="btn btn-default btn-lg col-xs-12" href="{{ site.base }}/teaching.pdf" role="button">{%icon
             fa-file-text-o%} Teaching Statement</span></a>
-          <a class="btn btn-default btn-lg col-xs-12" href="{{ site-base }}/cv.pdf" role="button">{%icon
+          <a class="btn btn-default btn-lg col-xs-12" href="{{ site.base }}/cv.pdf" role="button">{%icon
             fa-file-text-o%} CV</a></p>
         
         </div>
