updating about me

--- a/index.html
+++ b/index.html
@@ -33,21 +33,23 @@ notitle: true
 	Levy</a>
 	and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
 	Krishnamurthy</a> in
-	the <a href="https://syslab.cs.washington.edu/">Computer
-	Systems Lab</a>.  My current research focuses on systems for
-	large-scale, distributed applications, including distributed
-	runtime systems and transactional storage systems.  Before
-	starting my PhD, I worked for three years
+	the <a href="https://syslab.cs.washington.edu/">Computer Systems
+	Lab</a>.  My current research focuses on systems for large-scale,
+	distributed applications, including mobile/cloud runtime platforms
+	and transactional storage systems.  Before starting my PhD, I
+	worked for three years
 	at <a href="http://www.vmware.com/">VMware</a> in the virtual
-	machine monitor group. I received my S.B. in computer science
-	from <a href="http://www.mit.edu">MIT</a> in 2008 and my
-	M. Eng. in 2009. I was born
-	in <a href="http://www.ebeijing.gov.cn/">Beijing, China</a>
-	and spent most of my time growing up
+	machine monitor group on virtual machine checkpointing and memory
+	management. I received my S.B. and M.Eng. in computer science
+	from <a href="http://www.mit.edu">MIT</a>, where I worked
+	with <a href="https://pdos.csail.mit.edu/~kaashoek/">Frans
+	Kaashoek</a> in the <a href="http://pdos.csail.mit.edu">Parallel
+	and Distributed Operating Systems</a> group. I was born
+	in <a href="http://www.ebeijing.gov.cn/">Beijing, China</a> and
+	spent most of my time growing up
 	in <a href="http://en.wikipedia.org/wiki/Columbus,_Indiana">Columbus,
-	Indiana</a>. <a href="http://www.drkp.net">My husband</a> and
-	I cook, travel and occasionally do computer science
-	together.
+	Indiana</a>. <a href="http://www.drkp.net">My husband</a> and I
+	cook, travel and occasionally do computer science together.
     </p>
     <h3>News & Happenings</h3>
     <ul class="media-list">
