updating front page

--- a/index.html
+++ b/index.html
@@ -97,12 +97,8 @@ notitle: true
       Travel</div>
     <div class="contact">
       <ul class="fa-ul">
-    	<li><i class="fa-li fa fa-calendar"></i>Oct 5-7 / SOCC / Santa
-    	  Clara, CA</li>
-        <li><i class="fa-li fa fa-calendar"></i>Oct 30-Nov 1 / Rising
-          Stars / Pittsburgh, PA</li>
-        <li><i class="fa-li fa fa-calendar"></i>Nov 2-4 / OSDI /
-        Savannah, GA</li>
+    	<li><i class="fa-li fa fa-calendar"></i>Jan 12-13 / UBC /
+    	  Vancouver, Canada</li>
       </ul>
     </div>
 
