updating some formatting things

--- a/index.html
+++ b/index.html
@@ -56,9 +56,16 @@ notitle: true
       {% for post in site.posts limit: site.front_page_news %}
       {% if post.shortnews %}
       <li class="media">
+        {% if post.photo %}
 	<div class="media-left news hidden-xs">
-	  <img class="media-object img-thumbnail" src="{{ post.photo }}">
+          {% if post.link %}
+          <a href="{{ post.link }}">
+            {% endif %}
+	    <img class="media-object img-thumbnail"
+                 src="{{ post.photo }}" >
+            {% if post.link %} </a> {% endif %}
 	</div>
+        {% endif %}
 	<div class="media-body">
 	  <h5 class="media-heading">{{ post.date | date_to_long_string }}</h5>
 	  {{ post.content }}
@@ -99,6 +106,8 @@ notitle: true
       <ul class="fa-ul">
     	<li><i class="fa-li fa fa-calendar"></i>Jan 12-13 / UBC /
     	  Vancouver, Canada</li>
+    	<li><i class="fa-li fa fa-calendar"></i>Feb 7-8 / Georgia Tech /
+    	  Atlanta, GA</li>
       </ul>
     </div>
 
