some more formatting

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ notitle: true
         
         </div>
       </div>
-    </div>
+</div>
+<h3>Bio & Background</h3>
     <p>
       I work with
       <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
@@ -45,7 +46,7 @@ notitle: true
 	with <a href="https://pdos.csail.mit.edu/~kaashoek/">Frans
 	Kaashoek</a> in the <a href="http://pdos.csail.mit.edu">Parallel
 	and Distributed Operating Systems</a> group. I was born
-	in <a href="http://www.ebeijing.gov.cn/">Beijing, China</a> and
+	in <a href="http://www.ebeijing.gov.cn/">Beijing, China</a> but
 	spent most of my time growing up
 	in <a href="http://en.wikipedia.org/wiki/Columbus,_Indiana">Columbus,
 	Indiana</a>. <a href="http://www.drkp.net">My husband</a> and I
@@ -104,10 +105,12 @@ notitle: true
       Travel</div>
     <div class="contact">
       <ul class="fa-ul">
-    	<li><i class="fa-li fa fa-calendar"></i>Jan 12-13 / UBC /
-    	  Vancouver, Canada</li>
-    	<li><i class="fa-li fa fa-calendar"></i>Feb 7-8 / Georgia Tech /
-    	  Atlanta, GA</li>
+    	<li><i class="fa-li fa fa-calendar"></i>January 12-13
+          <br />UBC
+    	  <br />Vancouver, Canada</li>
+    	<li><i class="fa-li fa fa-calendar"></i>February 7-8
+          <br />Georgia Tech
+    	  <br />Atlanta, GA</li>
       </ul>
     </div>
 
