--- a/index.html
+++ b/index.html
@@ -105,12 +105,25 @@ notitle: true
       Travel</div>
     <div class="contact">
       <ul class="fa-ul">
-    	<li><i class="fa-li fa fa-calendar"></i>January 12-13
-          <br />UBC
-    	  <br />Vancouver, Canada</li>
+    	<!-- <li><i class="fa-li fa fa-calendar"></i>January 12-13 -->
+        <!--   <br />UBC -->
+    	<!--   <br />Vancouver, Canada</li> -->
+        <li><i class="fa-li fa fa-calendar"></i>February 2-3
+          <br />MSR
+    	  <br />Redmond, WA</li>
     	<li><i class="fa-li fa fa-calendar"></i>February 7-8
           <br />Georgia Tech
     	  <br />Atlanta, GA</li>
+    	<li><i class="fa-li fa fa-calendar"></i>February 20-21
+          <br />U. Wisconsin
+    	  <br />Madison, WI</li>
+        <li><i class="fa-li fa fa-calendar"></i>February 27-28
+          <br />MIT
+    	  <br />Cambridge, MA</li>
+    	<li><i class="fa-li fa fa-calendar"></i>March 2
+          <br />Princeton
+    	  <br />Princeton, NJ</li>
+
       </ul>
     </div>
 
