--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ notitle: true
     	<li><i class="fa-li fa fa-calendar"></i>February 7-8
           <br />Georgia Tech
     	  <br />Atlanta, GA</li>
+    	<li><i class="fa-li fa fa-calendar"></i>February 13-14
+          <br />UC Berkeley
+    	  <br />Berkeley, CA</li>
     	<li><i class="fa-li fa fa-calendar"></i>February 20-21
           <br />U. Wisconsin
     	  <br />Madison, WI</li>
@@ -123,7 +126,9 @@ notitle: true
     	<li><i class="fa-li fa fa-calendar"></i>March 2
           <br />Princeton
     	  <br />Princeton, NJ</li>
-
+    	<li><i class="fa-li fa fa-calendar"></i>March 6-7
+          <br />Stanford
+    	  <br />Palo Alto, CA</li>
       </ul>
     </div>
 
