--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ notitle: true
     	<li><i class="fa-li fa fa-calendar"></i>March 2
           <br />Princeton
     	  <br />Princeton, NJ</li>
+    	<li><i class="fa-li fa fa-calendar"></i>March 6-7
+          <br />Stanford
+    	  <br />Palo Alto, CA</li>
 
       </ul>
     </div>
