adding cmu interview

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@ notitle: true
     	<li><i class="fa-li fa fa-calendar"></i>March 6-7
           <br />Stanford
     	  <br />Palo Alto, CA</li>
+        <li><i class="fa-li fa fa-calendar"></i>April 5-6
+          <br />CMU
+    	  <br />Pittsburgh, PA</li>
       </ul>
     </div>
 
