updates to webpage

--- a/index.html
+++ b/index.html
@@ -109,29 +109,27 @@ notitle: true
         <!--   <br />UBC -->
     	<!--   <br />Vancouver, Canada</li> -->
         <li><i class="fa-li fa fa-calendar"></i>February 2-3
-          <br />MSR
-    	  <br />Redmond, WA</li>
+          <br />MSR</li>
     	<li><i class="fa-li fa fa-calendar"></i>February 13-14
-          <br />UC Berkeley
-    	  <br />Berkeley, CA</li>
+          <br />UC Berkeley</li>
     	<li><i class="fa-li fa fa-calendar"></i>February 20-21
-          <br />U. Wisconsin
-    	  <br />Madison, WI</li>
+          <br />U. Wisconsin</li>
     	<li><i class="fa-li fa fa-calendar"></i>February 23-24
-          <br />Georgia Tech
-    	  <br />Atlanta, GA</li>
+          <br />Georgia Tech</li>
         <li><i class="fa-li fa fa-calendar"></i>February 27-28
-          <br />MIT
-    	  <br />Cambridge, MA</li>
-    	<li><i class="fa-li fa fa-calendar"></i>March 2
-          <br />Princeton
-    	  <br />Princeton, NJ</li>
+          <br />MIT</li>
+    	<li><i class="fa-li fa fa-calendar"></i>March 2-3
+          <br />Princeton</li>
     	<li><i class="fa-li fa fa-calendar"></i>March 6-7
-          <br />Stanford
-    	  <br />Palo Alto, CA</li>
+          <br />Stanford</li>
+        <li><i class="fa-li fa fa-calendar"></i>March 30-31
+          <br />U. Michigan</li>
         <li><i class="fa-li fa fa-calendar"></i>April 5-6
-          <br />CMU
-    	  <br />Pittsburgh, PA</li>
+          <br />CMU</li>
+        <li><i class="fa-li fa fa-calendar"></i>April 19
+          <br />UC San Diego</li>
+        <li><i class="fa-li fa fa-calendar"></i>April 24-25
+          <br />UT Austin</li>
       </ul>
     </div>
 
