--- a/index.html
+++ b/index.html
@@ -7,50 +7,31 @@ notitle: true
 
 <div class="row">
   <div class="col-xs-12 col-sm-9">
-    <div class="jumbotron">
-      <div class="container-fluid">
-        <div class="row">
-          <h3>{%icon fa-graduation-cap%} I'm graduating and on the job market!</h3>
-        <p class="hidden-xs"><a class="btn btn-default btn-lg" href="{{ site.base }}/research.pdf" role="button">{%icon
-            fa-file-text-o%} Research Statement</span></a>
-          <a class="btn btn-default btn-lg" href="{{ site.base }}/teaching.pdf" role="button">{%icon
-            fa-file-text-o%} Teaching Statement</span></a>
-          <a class="btn btn-default btn-lg" href="{{ site.base }}/cv.pdf" role="button">{%icon
-            fa-file-text-o%} CV</a></p>
-<p class="visible-xs"><a class="btn btn-default btn-lg col-xs-12" href="{{ site.base }}/research.pdf" role="button">{%icon
-            fa-file-text-o%} Research Statement</span></a>
-          <a class="btn btn-default btn-lg col-xs-12" href="{{ site.base }}/teaching.pdf" role="button">{%icon
-            fa-file-text-o%} Teaching Statement</span></a>
-          <a class="btn btn-default btn-lg col-xs-12" href="{{ site.base }}/cv.pdf" role="button">{%icon
-            fa-file-text-o%} CV</a></p>
-        
-        </div>
-      </div>
-</div>
-<h3>Bio & Background</h3>
+    <h3>I am a researcher at <a href="https://www.microsoft.com/en-us/research/">Microsoft Research.</a></h3>
     <p>
-      I work with
+      My research focus is primarily in operating systems and
+      distributed systems.
+    </p>
+
+    <p>
+      I completed my PhD in 2017 at
+      the <a href="//www.cs.washington.edu">University of
+      Washington</a>, where I was advised by
       <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
 	Levy</a>
 	and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
-	Krishnamurthy</a> in
-	the <a href="https://syslab.cs.washington.edu/">Computer Systems
-	Lab</a>.  My current research focuses on systems for large-scale,
-	distributed applications, including mobile/cloud runtime platforms
-	and transactional storage systems.  Before starting my PhD, I
-	worked for three years
-	at <a href="http://www.vmware.com/">VMware</a> in the virtual
-	machine monitor group on virtual machine checkpointing and memory
-	management. I received my S.B. and M.Eng. in computer science
-	from <a href="http://www.mit.edu">MIT</a>, where I worked
-	with <a href="https://pdos.csail.mit.edu/~kaashoek/">Frans
-	Kaashoek</a> in the <a href="http://pdos.csail.mit.edu">Parallel
-	and Distributed Operating Systems</a> group. I was born
-	in <a href="http://www.ebeijing.gov.cn/">Beijing, China</a> but
-	spent most of my time growing up
+	Krishnamurthy</a>.  My thesis is on distributed systems for
+	applications that span mobile devices and cloud servers.
+	Before my PhD, I received my S.B. and M.Eng.
+	from <a href="http://www.mit.edu">MIT</a>.
+    </p>
+
+    <p>
+      I was born in <a href="http://www.ebeijing.gov.cn/">Beijing,
+	China</a> but spent most of my time growing up
 	in <a href="http://en.wikipedia.org/wiki/Columbus,_Indiana">Columbus,
-	Indiana</a>. <a href="http://www.drkp.net">My husband</a> and I
-	cook, travel and occasionally do computer science together.
+	Indiana</a>. <a href="http://www.drkp.net">My husband</a> and
+	I cook, travel and occasionally do computer science together.
     </p>
     <h3>News & Happenings</h3>
     <ul class="media-list">
@@ -89,48 +70,21 @@ notitle: true
       Contact</div>
     <div class="contact">
       <ul class="fa-ul">
-	<li><i class="fa-li fa fa-envelope"></i>iyzhang@uw.edu</li>
-	<li><i class="fa-li fa fa-location-arrow"></i>185 Stevens Way
-	  <br class="hidden-xs">Seattle, WA 98195</li>
-	<li><i class="fa-li fa fa-building">
-	    <a href="https://www.cs.washington.edu/contact/"></i>Allen
-	  Center</a>
-	  <br class="hidden-xs">Room 591</li>
+	<li><i class="fa-li fa fa-envelope"></i>Irene.Zhang @microsoft.com</li>
+	<li><i class="fa-li fa fa-location-arrow"></i>Office 2724
+          <br class="hidden-xs">Building 99</li>
+	<li><i class="fa-li fa fa-building"></i>14820 NE 36th St.
+          <br class="hidden-xs">Redmond, WA</li>
 	<li><i class="fa-li fa fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
-	<li><i class="fa-li fa fa-gitlab"></i><a href="https://gitlab.cs.washington.edu/u/iyzhang">iyzhang@gitlab</a></li>
+	<!-- <li><i class="fa-li fa fa-gitlab"></i><a href="https://gitlab.cs.washington.edu/u/iyzhang">iyzhang@gitlab</a></li> -->
       </ul>
     </div>
-        <div class="contact-title">
+    <div class="contact-title">
       Travel</div>
     <div class="contact">
       <ul class="fa-ul">
-    	<!-- <li><i class="fa-li fa fa-calendar"></i>January 12-13 -->
-        <!--   <br />UBC -->
-    	<!--   <br />Vancouver, Canada</li> -->
-        <!-- <li><i class="fa-li fa fa-calendar"></i>February 2-3 -->
-        <!--   <br />MSR</li> -->
-    	<!-- <li><i class="fa-li fa fa-calendar"></i>February 13-14 -->
-        <!--   <br />UC Berkeley</li> -->
-    	<!-- <li><i class="fa-li fa fa-calendar"></i>February 20-21 -->
-        <!--   <br />U. Wisconsin</li> -->
-    	<!-- <li><i class="fa-li fa fa-calendar"></i>February 23-24 -->
-        <!--   <br />Georgia Tech</li> -->
-        <!-- <li><i class="fa-li fa fa-calendar"></i>February 27-28 -->
-        <!--   <br />MIT</li> -->
-    	<!-- <li><i class="fa-li fa fa-calendar"></i>March 2-3 -->
-        <!--   <br />Princeton</li> -->
-    	<!-- <li><i class="fa-li fa fa-calendar"></i>March 6-7 -->
-        <!--   <br />Stanford</li> -->
-        <li><i class="fa-li fa fa-calendar"></i>March 23
-          <br />VMware Research</li>
-        <li><i class="fa-li fa fa-calendar"></i>March 30-31
-          <br />U. Michigan</li>
-        <li><i class="fa-li fa fa-calendar"></i>April 5-6
-          <br />CMU</li>
-        <li><i class="fa-li fa fa-calendar"></i>April 19
-          <br />UC San Diego</li>
-        <li><i class="fa-li fa fa-calendar"></i>April 24-25
-          <br />UT Austin</li>
+        <li><i class="fa-li fa fa-calendar"></i>Oct 28-31
+          <br />SOSP<br />Shanghai, China</li>
       </ul>
     </div>
 
