fixing up some formatting issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ notitle: true
 
 <div class="row">
   <div class="col-xs-3">
-    <img src="{{ site.base }}/img/iyzhang.jpg" alt="Photo of me"
+    <img src="img/iyzhang.jpg" alt="Photo of me"
          class="img-circle img-responsive">
   </div>
   <div class="col-xs-9 jumbotron">
