new posts new research

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ notitle: true
   </div>
 </div>
 
-<h3> My research focuses on operating systems and distributed
+<h3> My research focuses on datacenter operating systems and distributed
       systems.</h3>
   <p>
     I completed my PhD in 2017 at
@@ -25,18 +25,21 @@ notitle: true
       Washington</a>, where I was advised by
     <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
       Levy</a>
-    and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
+      and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
       Krishnamurthy</a>.  My thesis is on distributed systems for
-    applications that span mobile devices and cloud servers.
-    Before my PhD, I received my S.B. and M.Eng.
-    from <a href="http://www.mit.edu">MIT</a>.
+      applications that span mobile devices and cloud servers.  Before
+      my PhD, I received my S.B. and M.Eng.
+      from <a href="http://www.mit.edu">MIT</a> and worked for 3 years
+      in the virtual machine monitor group
+      at <a href="https://www.vmware.com">VMware</a>.
   </p>
   
   <p>
     I was born in <a href="http://www.ebeijing.gov.cn/">Beijing,
       China</a> but spent most of my time growing up
-    in <a href="http://en.wikipedia.org/wiki/Columbus,_Indiana">Columbus,
-      Indiana</a>. <a href="http://www.drkp.net">My husband</a> and
-    I cook, travel and occasionally do computer science together.
+      in <a href="http://en.wikipedia.org/wiki/Columbus,_Indiana">Columbus,
+      Indiana</a>. <a href="http://www.drkp.net">My husband</a> and I
+      like to cook, travel and occasionally do computer science
+      together.
   </p>
 
