--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@ notitle: true
 <h3> My research focuses on datacenter operating systems and distributed
       systems.</h3>
   <p>
+    I am especially interested in making it easier to build
+    microsecond-scale datacenter systems by leveraging new datacenter
+    hardware technologies, like kernel-bypass, RDMA and programmable
+    devices.  My most recent work has been on
+    the <a href="//github.com/demikernel/demikernel">Demikernel
+    datapath OS</a> and related projects.    A <a href="bio.txt">bio</a> and
+      <a href="abstract.txt">talk abstract</a> for my most recent work
+      is available.
+  </p>
+  <p>
     I completed my PhD in 2017 at
     the <a href="//www.cs.washington.edu">University of
-      Washington</a>, where I was advised by
-    <a href="http://www.cs.washington.edu/people/faculty/levy/">Hank
-      Levy</a>
-      and <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind
-      Krishnamurthy</a>.  My thesis is on distributed systems for
-      applications that span mobile devices and cloud servers.  Before
-      my PhD, I received my S.B. and M.Eng.
-      from <a href="http://www.mit.edu">MIT</a> and worked for 3 years
-      in the virtual machine monitor group
-      at <a href="https://www.vmware.com">VMware</a>.
+    Washington</a>, where my research focused on distributed systems that
+    span mobile devices and cloud servers.  My thesis work received
+    the ACM SIGOPS Dennis Ritchie doctoral dissertation award and the UW
+    Allen School William Chan doctoral dissertion award.  Before my
+    PhD, I received my S.B. and M.Eng.
+    from <a href="http://www.mit.edu">MIT</a> and worked for 3 years
+    in the virtual machine monitor group
+    at <a href="https://www.vmware.com">VMware</a>.
   </p>
   
   <p>
