--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ notitle: true
 
 <div class="row">
   <div class="col-xs-3">
-    <img src="img/iyzhang.jpg" alt="Photo of me"
+    <img src="img/me-2023.jpeg" alt="Photo of me"
          class="img-circle img-responsive">
   </div>
   <div class="col-xs-9 jumbotron">
@@ -24,7 +24,7 @@ notitle: true
     microsecond-scale datacenter systems by leveraging new datacenter
     hardware technologies, like kernel-bypass, RDMA and programmable
     devices.  My most recent work has been on
-    the <a href="//github.com/demikernel/demikernel">Demikernel
+    the <a href="//github.com/microsoft/demikernel">Demikernel
     datapath OS</a> and related projects.    A <a href="bio.txt">bio</a> and
       <a href="abstract.txt">talk abstract</a> for my most recent work
       is available.
